@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-07-05T01:00:48Z",
-  "count_outdated" : 104,
-  "uniques_outdated" : 86,
-  "count" : 105,
-  "uniques" : 87,
+  "timestamp" : "2025-07-25T01:06:34Z",
+  "count_outdated" : 105,
+  "uniques_outdated" : 87,
+  "count" : 106,
+  "uniques" : 88,
   "clones" : [
     {
-      "timestamp": "2025-07-04T00:00:00Z",
+      "timestamp": "2025-07-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
